force-app/main/default/objects/CancelCalculate__c/fields/IsRefundAmountConfirm__c.field-meta.xml
<CustomField>
    <fullName>IsRefundAmountConfirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>返金金額確認フラグ</label>
    <type>Checkbox</type>
</CustomField>