force-app/main/default/objects/CancelCalculate__c/fields/IsRefundAutoDunningExecution__c.field-meta.xml
<CustomField>
    <fullName>IsRefundAutoDunningExecution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>敷金返金自動督促実行フラグ</label>
    <type>Checkbox</type>
</CustomField>