force-app/main/default/objects/CancelCalculate__c/fields/IsReminderUnnecessary__c.field-meta.xml
<CustomField>
    <fullName>IsReminderUnnecessary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>督促不要</label>
    <type>Checkbox</type>
</CustomField>