force-app/main/default/objects/CancelCalculate__c/fields/IsRemoteAccessEnable__c.field-meta.xml
<CustomField>
    <fullName>IsRemoteAccessEnable__c</fullName>
    <description>不要項目だったため、数式の中身を以下に変更Account__r.IsRemoteAccessEnable__c➡false</description>
    <formula>false</formula>
    <label>在宅非表示フラグ</label>
    <type>Checkbox</type>
</CustomField>