force-app/main/default/objects/CancelCalculate__c/fields/IsTransferFeeSubtraction1__c.field-meta.xml
<CustomField>
    <fullName>IsTransferFeeSubtraction1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>振手差引フラグ1</label>
    <type>Checkbox</type>
</CustomField>