force-app/main/default/objects/CancelCalculate__c/fields/LeaveScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveScheduledDate__c</fullName>
    <formula>CancelApprication__r.MoveOutScheduledDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>退去予定日</label>
    <type>Date</type>
</CustomField>