force-app/main/default/objects/CancelCalculate__c/fields/LenderPayTa10SubTotal__c.field-meta.xml
<CustomField>
    <fullName>LenderPayTa10SubTotal__c</fullName>
    <label>貸主負担合計額消費税10%集計</label>
    <summarizedField>CalculateDetail__c.DeleateLenderPay__c</summarizedField>
    <summaryFilterItems>
        <field>CalculateDetail__c.TaxRate2__c</field>
        <operation>equals</operation>
        <value>10</value>
    </summaryFilterItems>
    <summaryForeignKey>CalculateDetail__c.CancelCancelCalculate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>