force-app/main/default/objects/CancelCalculate__c/fields/LenderPayTax8__c.field-meta.xml
<CustomField>
    <fullName>LenderPayTax8__c</fullName>
    <formula>ROUND( LenderPayTax8SubTotal__c * 0.08, 0)</formula>
    <label>貸主負担合計（内消費税_8％）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>