force-app/main/default/objects/CancelCalculate__c/fields/LenderPayTotal__c.field-meta.xml
<CustomField>
    <fullName>LenderPayTotal__c</fullName>
    <formula>LenderPayTSubTotal__c + LenderPayTax8SubTotal__c</formula>
    <label>貸主負担合計額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>