force-app/main/default/objects/CancelCalculate__c/fields/LenderPayTSubTotal__c.field-meta.xml
<CustomField>
    <fullName>LenderPayTSubTotal__c</fullName>
    <label>貸主負担合計額小計</label>
    <summarizedField>CalculateDetail__c.DeleateLenderPay__c</summarizedField>
    <summaryForeignKey>CalculateDetail__c.CancelCancelCalculate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>