force-app/main/default/objects/CancelCalculate__c/fields/Other1AmountCheckComment__c.field-meta.xml
<CustomField>
    <fullName>Other1AmountCheckComment__c</fullName>
    <label>その他1金額チェックコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>