force-app/main/default/objects/CancelCalculate__c/fields/Other1AmountCheckResult__c.field-meta.xml
<CustomField>
    <fullName>Other1AmountCheckResult__c</fullName>
    <formula>IF(OtherAmount1__c  -  DailyOther1AmountAutoCalc__c =0,&quot;OK&quot;,&quot;NG&quot;)</formula>
    <label>その他1金額チェック結果</label>
    <type>Text</type>
</CustomField>