force-app/main/default/objects/CancelCalculate__c/fields/Other1AmountTaxIncluded__c.field-meta.xml
<CustomField>
    <fullName>Other1AmountTaxIncluded__c</fullName>
    <label>その他1_金額（内税）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>