force-app/main/default/objects/CancelCalculate__c/fields/Other3AmountCheckResult__c.field-meta.xml
<CustomField>
    <fullName>Other3AmountCheckResult__c</fullName>
    <formula>IF(BillingRentOther3Amount__c  -  DailyRateOther3AmountAutoCalc__c = 0,&quot;OK&quot;,&quot;NG&quot;)</formula>
    <label>その他3金額チェック結果</label>
    <type>Text</type>
</CustomField>