force-app/main/default/objects/CancelCalculate__c/fields/Other4AmountCheckResult__c.field-meta.xml
<CustomField>
    <fullName>Other4AmountCheckResult__c</fullName>
    <formula>IF(BillingRentOther4Amount__c  -  DailyRateOther4AmountAutoCalc__c = 0,&quot;OK&quot;,&quot;NG&quot;)</formula>
    <label>その他4金額チェック結果</label>
    <type>Text</type>
</CustomField>