force-app/main/default/objects/CancelCalculate__c/fields/OtherName1__c.field-meta.xml
<CustomField>
    <fullName>OtherName1__c</fullName>
    <label>解約月請求その他1費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>