force-app/main/default/objects/CancelCalculate__c/fields/OtherName2__c.field-meta.xml
<CustomField>
    <fullName>OtherName2__c</fullName>
    <label>解約月請求その他2費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>