force-app/main/default/objects/CancelCalculate__c/fields/OwnerNameKana__c.field-meta.xml
<CustomField>
    <fullName>OwnerNameKana__c</fullName>
    <label>家主名カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>