force-app/main/default/objects/CancelCalculate__c/fields/PaymentAmountOwendLender__c.field-meta.xml
<CustomField>
    <fullName>PaymentAmountOwendLender__c</fullName>
    <label>支払額（SNT→貸主）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>