force-app/main/default/objects/CancelCalculate__c/fields/PaymentBankAccountIdRepeat__c.field-meta.xml
<CustomField>
    <fullName>PaymentBankAccountIdRepeat__c</fullName>
    <externalId>true</externalId>
    <label>入金口座ID繰返し</label>
    <length>255</length>
    <type>Text</type>
</CustomField>