force-app/main/default/objects/CancelCalculate__c/fields/PaymentConfirmCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmCompletedDate__c</fullName>
    <label>入金確認完了日</label>
    <type>Date</type>
</CustomField>