force-app/main/default/objects/CancelCalculate__c/fields/PaymentConfirmMemo__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmMemo__c</fullName>
    <label>入金確認メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>