force-app/main/default/objects/CancelCalculate__c/fields/PaymentDestinationBankAccount2__c.field-meta.xml
<CustomField>
    <fullName>PaymentDestinationBankAccount2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>支払先2_口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>解約精算 (請求先2_口座)</relationshipLabel>
    <relationshipName>RelationBankAccountCalculateDetail2</relationshipName>
    <type>Lookup</type>
</CustomField>