force-app/main/default/objects/CancelCalculate__c/fields/PaymentDoneAmountManualInput__c.field-meta.xml
<CustomField>
    <fullName>PaymentDoneAmountManualInput__c</fullName>
    <label>入金済額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>