force-app/main/default/objects/CancelCalculate__c/fields/Penalty1__c.field-meta.xml
<CustomField>
    <fullName>Penalty1__c</fullName>
    <label>違約金等1_金額（内税）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>