force-app/main/default/objects/CancelCalculate__c/fields/Penalty2ExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>Penalty2ExpenseItems__c</fullName>
    <label>違約金2_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>