force-app/main/default/objects/CancelCalculate__c/fields/Penalty2TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>Penalty2TaxCategory__c</fullName>
    <label>違約金2_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>