force-app/main/default/objects/CancelCalculate__c/fields/Penalty3ExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>Penalty3ExpenseItems__c</fullName>
    <label>違約金3_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>