force-app/main/default/objects/CancelCalculate__c/fields/Penalty3TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>Penalty3TaxCategory__c</fullName>
    <label>違約金3_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>