force-app/main/default/objects/CancelCalculate__c/fields/PenaltyCheckComment__c.field-meta.xml
<CustomField>
    <fullName>PenaltyCheckComment__c</fullName>
    <label>違約金チェックコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>