force-app/main/default/objects/CancelCalculate__c/fields/Reapplication1_ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1_ApplicationDate__c</fullName>
    <label>再申請①決裁申請日</label>
    <type>Date</type>
</CustomField>