force-app/main/default/objects/CancelCalculate__c/fields/Reapplication1_DecisionAcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1_DecisionAcquisitionDate__c</fullName>
    <label>再申請①決裁取得日</label>
    <type>Date</type>
</CustomField>