force-app/main/default/objects/CancelCalculate__c/fields/Reapplication1OccurrenceDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1OccurrenceDate__c</fullName>
    <label>再申請①発生日</label>
    <type>Date</type>
</CustomField>