force-app/main/default/objects/CancelCalculate__c/fields/Reapplication2ChangeContentConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2ChangeContentConfirmDate__c</fullName>
    <label>再申請②変更内容確認日</label>
    <type>Date</type>
</CustomField>