force-app/main/default/objects/CancelCalculate__c/fields/Reapplication2DocumentCollectDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2DocumentCollectDate__c</fullName>
    <label>再申請②書類回収日</label>
    <type>Date</type>
</CustomField>