force-app/main/default/objects/CancelCalculate__c/fields/Reapplication2EmployeeAcceptDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2EmployeeAcceptDate__c</fullName>
    <label>再申請②社員了承日</label>
    <type>Date</type>
</CustomField>