force-app/main/default/objects/CancelCalculate__c/fields/Reapplication2FinanceContactContent__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2FinanceContactContent__c</fullName>
    <label>再申請②経理連絡内容（申請前）</label>
    <type>TextArea</type>
</CustomField>