force-app/main/default/objects/CancelCalculate__c/fields/Reapplication2ReconfirmChargeReturnDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2ReconfirmChargeReturnDate__c</fullName>
    <label>再申請②再査から担当へ戻し日</label>
    <type>Date</type>
</CustomField>