force-app/main/default/objects/CancelCalculate__c/fields/Reapplication3_ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3_ApplicationDate__c</fullName>
    <label>再申請③決裁申請日</label>
    <type>Date</type>
</CustomField>