force-app/main/default/objects/CancelCalculate__c/fields/Reapplication3ChangeContentConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3ChangeContentConfirmDate__c</fullName>
    <label>再申請③変更内容確認日</label>
    <type>Date</type>
</CustomField>