force-app/main/default/objects/CancelCalculate__c/fields/ReconfirmTeam__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再査担当チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>解約精算 (再査担当チーム)</relationshipLabel>
    <relationshipName>ReconfirmTeamSection</relationshipName>
    <type>Lookup</type>
</CustomField>