force-app/main/default/objects/CancelCalculate__c/fields/ReducedAmount__c.field-meta.xml
<CustomField>
    <fullName>ReducedAmount__c</fullName>
    <formula>BillingAmount__c  -  BorrowerPayTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>減額分</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>