force-app/main/default/objects/CancelCalculate__c/fields/RefundReminderDate__c.field-meta.xml
<CustomField>
    <fullName>RefundReminderDate__c</fullName>
    <label>返金督促日</label>
    <type>Date</type>
</CustomField>