force-app/main/default/objects/CancelCalculate__c/fields/ReKeeper__c.field-meta.xml
<CustomField>
    <fullName>ReKeeper__c</fullName>
    <label>再保管者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>