force-app/main/default/objects/CancelCalculate__c/fields/RemainingDays__c.field-meta.xml
<CustomField>
    <fullName>RemainingDays__c</fullName>
    <formula>DAY((DATE(CASE(MONTH( CancelApprication__r.LastRentDefraymentDate__c ) , 12, YEAR(CancelApprication__r.LastRentDefraymentDate__c) + 1,YEAR(CancelApprication__r.LastRentDefraymentDate__c) ) ,CASE( MONTH(CancelApprication__r.LastRentDefraymentDate__c) , 12, 1, MONTH(CancelApprication__r.LastRentDefraymentDate__c) + 1 ) ,1 ) - 1)) - DAY(CancelApprication__r.LastRentDefraymentDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>残日数（日）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>