force-app/main/default/objects/CancelCalculate__c/fields/RemittancePaymentCheckDate__c.field-meta.xml
<CustomField>
    <fullName>RemittancePaymentCheckDate__c</fullName>
    <label>送金入金チェック日</label>
    <type>Date</type>
</CustomField>