force-app/main/default/objects/CancelCalculate__c/fields/RemitteeRepeatId__c.field-meta.xml
<CustomField>
    <fullName>RemitteeRepeatId__c</fullName>
    <externalId>true</externalId>
    <label>送金先繰返しID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>