force-app/main/default/objects/CancelCalculate__c/fields/RentalChargesFinanceSubmitConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>RentalChargesFinanceSubmitConfirmDate__c</fullName>
    <label>レンタル手数料経理提出確認日</label>
    <type>Date</type>
</CustomField>