force-app/main/default/objects/CancelCalculate__c/fields/RentalChargesFinanceSubmitter__c.field-meta.xml
<CustomField>
    <fullName>RentalChargesFinanceSubmitter__c</fullName>
    <label>レンタル手数料経理提出者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>