force-app/main/default/objects/CancelCalculate__c/fields/RentCalcCheckComment__c.field-meta.xml
<CustomField>
    <fullName>RentCalcCheckComment__c</fullName>
    <label>賃料計算チェックコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>