force-app/main/default/objects/CancelCalculate__c/fields/RentCalcMethodCheck__c.field-meta.xml
<CustomField>
    <fullName>RentCalcMethodCheck__c</fullName>
    <label>賃料計算方法チェック</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>