force-app/main/default/objects/CancelCalculate__c/fields/RentCalcMethodRealEstateInfo__c.field-meta.xml
<CustomField>
    <fullName>RentCalcMethodRealEstateInfo__c</fullName>
    <formula>TEXT(RealEstate__r.CancelMonthPaymentMethod__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>賃料計算方法（物件情報）</label>
    <type>Text</type>
</CustomField>