force-app/main/default/objects/CancelCalculate__c/fields/RentCheckComment__c.field-meta.xml
<CustomField>
    <fullName>RentCheckComment__c</fullName>
    <label>家賃チェックコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>