force-app/main/default/objects/CancelCalculate__c/fields/RepairEstimateCollectScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>RepairEstimateCollectScheduleDate__c</fullName>
    <label>見積取得予定日</label>
    <type>Date</type>
</CustomField>