force-app/main/default/objects/CancelCalculate__c/fields/RepeatCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>RepeatCreatedDate__c</fullName>
    <label>繰返し作成日</label>
    <type>Date</type>
</CustomField>