force-app/main/default/objects/CancelCalculate__c/fields/ReReconfirmSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>ReReconfirmSubmitDate__c</fullName>
    <label>（再）再査提出日</label>
    <type>Date</type>
</CustomField>