force-app/main/default/objects/CancelCalculate__c/fields/ResidentDepartment__c.field-meta.xml
<CustomField>
    <fullName>ResidentDepartment__c</fullName>
    <formula>Resident__r.Department</formula>
    <label>入居者部署</label>
    <type>Text</type>
</CustomField>