force-app/main/default/objects/CancelCalculate__c/fields/ReStorageDate__c.field-meta.xml
<CustomField>
    <fullName>ReStorageDate__c</fullName>
    <label>再保管日</label>
    <type>Date</type>
</CustomField>