force-app/main/default/objects/CancelCalculate__c/fields/ReturnFinanceContact__c.field-meta.xml
<CustomField>
    <fullName>ReturnFinanceContact__c</fullName>
    <label>返却経理連絡者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>