force-app/main/default/objects/CancelCalculate__c/fields/RoomName__c.field-meta.xml
<CustomField>
    <fullName>RoomName__c</fullName>
    <formula>RealEstate__r.RoomNum__c</formula>
    <label>部屋番号</label>
    <type>Text</type>
</CustomField>