force-app/main/default/objects/CancelCalculate__c/fields/SecurityDepositedFlag__c.field-meta.xml
<CustomField>
    <fullName>SecurityDepositedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>入金済みフラグ</label>
    <type>Checkbox</type>
</CustomField>