force-app/main/default/objects/CancelCalculate__c/fields/SecurityDepositReplacementCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>SecurityDepositReplacementCreatedDate__c</fullName>
    <label>差し替え作成日</label>
    <type>Date</type>
</CustomField>