force-app/main/default/objects/CancelCalculate__c/fields/SelfPayAmount__c.field-meta.xml
<CustomField>
    <fullName>SelfPayAmount__c</fullName>
    <label>（不要）入居者負担額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>