force-app/main/default/objects/CancelCalculate__c/fields/SelfPayAmountRollUpSummary__c.field-meta.xml
<CustomField>
    <fullName>SelfPayAmountRollUpSummary__c</fullName>
    <label>入居者負担額（積み上げ集計）</label>
    <summarizedField>CalculateDetail__c.ResidentPayAmount__c</summarizedField>
    <summaryForeignKey>CalculateDetail__c.CancelCancelCalculate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>