force-app/main/default/objects/CancelCalculate__c/fields/SelfPayRule__c.field-meta.xml
<CustomField>
    <fullName>SelfPayRule__c</fullName>
    <formula>TEXT(ServiceContractCancel__r.SelfPayRule__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>個人負担ルール</label>
    <type>Text</type>
</CustomField>