force-app/main/default/objects/CancelCalculate__c/fields/SelfPayTransferBankAccountName__c.field-meta.xml
<CustomField>
    <fullName>SelfPayTransferBankAccountName__c</fullName>
    <formula>Account__r.ServiceContractCancel__r.SelfPayTrasferBankAccount__r.BankAccountName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>個人負担振込み口座名義</label>
    <type>Text</type>
</CustomField>