force-app/main/default/objects/CancelCalculate__c/fields/SelfPayTransferBankAccountNum__c.field-meta.xml
<CustomField>
    <fullName>SelfPayTransferBankAccountNum__c</fullName>
    <formula>Account__r.ServiceContractCancel__r.SelfPayTrasferBankAccount__r.Name</formula>
    <label>個人負担振込み口座番号</label>
    <type>Text</type>
</CustomField>