force-app/main/default/objects/CancelCalculate__c/fields/SelfPayTransferBankName__c.field-meta.xml
<CustomField>
    <fullName>SelfPayTransferBankName__c</fullName>
    <formula>Account__r.ServiceContractCancel__r.SelfPayTrasferBankAccount__r.BankName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>個人負担振込み銀行名</label>
    <type>Text</type>
</CustomField>