force-app/main/default/objects/CancelCalculate__c/fields/SelfPayTransferBranchName__c.field-meta.xml
<CustomField>
    <fullName>SelfPayTransferBranchName__c</fullName>
    <formula>Account__r.ServiceContractCancel__r.SelfPayTrasferBankAccount__r.BranchOfficeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>個人振込み支店名</label>
    <type>Text</type>
</CustomField>