force-app/main/default/objects/CancelCalculate__c/fields/SendLetter__c.field-meta.xml
<CustomField>
    <fullName>SendLetter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送付状</label>
    <referenceTo>SendLetter__c</referenceTo>
    <relationshipLabel>解約精算</relationshipLabel>
    <relationshipName>SendLetter_CancelCalculate</relationshipName>
    <type>Lookup</type>
</CustomField>