force-app/main/default/objects/CancelCalculate__c/fields/SendScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>SendScheduledDate__c</fullName>
    <label>送付予定日</label>
    <type>Date</type>
</CustomField>