force-app/main/default/objects/CancelCalculate__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <formula>CancelCalculateTeam__r.Signature__c</formula>
    <label>署名</label>
    <type>Text</type>
</CustomField>