force-app/main/default/objects/CancelCalculate__c/fields/SPCExtractionRequestDate__c.field-meta.xml
<CustomField>
    <fullName>SPCExtractionRequestDate__c</fullName>
    <label>SPC抜出依頼日</label>
    <type>Date</type>
</CustomField>