force-app/main/default/objects/CancelCalculate__c/fields/SPCExtractionRequester__c.field-meta.xml
<CustomField>
    <fullName>SPCExtractionRequester__c</fullName>
    <label>SPC抜出依頼者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>