force-app/main/default/objects/CancelCalculate__c/fields/SpecialCorrespondenceMemoReserve__c.field-meta.xml
<CustomField>
    <fullName>SpecialCorrespondenceMemoReserve__c</fullName>
    <label>特殊対応メモ（予備）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>