force-app/main/default/objects/CancelCalculate__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>入居中</fullName>
            </value>
            <value>
                <fullName>見積り準備中</fullName>
            </value>
            <value>
                <fullName>内容確認中</fullName>
            </value>
            <value>
                <fullName>決裁申請中</fullName>
            </value>
            <value>
                <fullName>対応中（返金/支払い)</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>