force-app/main/default/objects/CancelCalculate__c/fields/StorageFinanceReporter__c.field-meta.xml
<CustomField>
    <fullName>StorageFinanceReporter__c</fullName>
    <label>保管経理報告者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>