force-app/main/default/objects/CancelCalculate__c/fields/StorageTargetPerson__c.field-meta.xml
<CustomField>
    <fullName>StorageTargetPerson__c</fullName>
    <label>保管対象者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>