force-app/main/default/objects/CancelCalculate__c/fields/TraderContactMatter__c.field-meta.xml
<CustomField>
    <fullName>TraderContactMatter__c</fullName>
    <label>企業連絡備考</label>
    <type>TextArea</type>
</CustomField>