force-app/main/default/objects/CancelCalculate__c/fields/TransferChargesLender__c.field-meta.xml
<CustomField>
    <fullName>TransferChargesLender__c</fullName>
    <label>振込手数料(貸主）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>