force-app/main/default/objects/CancelCalculate__c/fields/TransferFeeLenderPayment__c.field-meta.xml
<CustomField>
    <fullName>TransferFeeLenderPayment__c</fullName>
    <label>振込手数料（貸主へ支払い）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>