force-app/main/default/objects/CancelCalculate__c/validationRules/OnlyIn.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyIn</fullName>
    <active>true</active>
    <errorConditionFormula>BEGINS(TEXT(  Other1TaxCategory__c  ) ,&quot;Ex&quot;)</errorConditionFormula>
    <errorDisplayField>Other1TaxCategory__c</errorDisplayField>
    <errorMessage>税率は、内税（税込価格）で入力してください。</errorMessage>
</ValidationRule>