force-app/main/default/objects/CancelCalculate__c/validationRules/OnlyIn_Other2TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyIn_Other2TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>BEGINS(TEXT(  Other2TaxCategory__c  ) ,&quot;Ex&quot;)</errorConditionFormula>
    <errorDisplayField>Other2TaxCategory__c</errorDisplayField>
    <errorMessage>税率は、内税（税込価格）で入力してください。</errorMessage>
</ValidationRule>