force-app/main/default/objects/CancelCalculate__c/validationRules/Other1TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>Other1TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( Other1AmountTaxIncluded__c )) , ISBLANK( TEXT( Other1TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>Other1TaxCategory__c</errorDisplayField>
    <errorMessage>その他1_税区分を入力してください</errorMessage>
</ValidationRule>