force-app/main/default/objects/CancelCalculate__c/validationRules/Other2TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>Other2TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( Other2AmountTaxIncluded__c )) , ISBLANK( TEXT( Other2TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>Other2TaxCategory__c</errorDisplayField>
    <errorMessage>その他2_税区分を入力してください</errorMessage>
</ValidationRule>