force-app/main/default/objects/CancelCalculate__c/validationRules/Penalty1TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>Penalty1TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( Penalty1__c )) , ISBLANK( TEXT( Penalty1TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>Penalty1TaxCategory__c</errorDisplayField>
    <errorMessage>違約金1_税区分を入力してください</errorMessage>
</ValidationRule>