force-app/main/default/objects/CancelCalculate__c/validationRules/Penalty2TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>Penalty2TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( Penalty2__c )) , ISBLANK( TEXT( Penalty2TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>Penalty2TaxCategory__c</errorDisplayField>
    <errorMessage>違約金2_税区分を入力してください</errorMessage>
</ValidationRule>