force-app/main/default/objects/CancelCalculate__c/validationRules/Penalty3TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>Penalty3TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( Penalty3__c )) , ISBLANK( TEXT( Penalty3TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>Penalty3TaxCategory__c</errorDisplayField>
    <errorMessage>違約金3_税区分を入力してください</errorMessage>
</ValidationRule>