force-app/main/default/objects/CancelCalculate__c/listViews/CalculateCheckWithProblem.listView-meta.xml
<ListView>
    <fullName>CalculateCheckWithProblem</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>RealEstate__c</columns>
    <columns>CalculateCheckConfirmStatus__c</columns>
    <columns>IsCalculateCheckProblem__c</columns>
    <columns>CancelCalculateStaff__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCalculateCheckProblem__c</field>
        <operation>equals</operation>
        <value>NGあり</value>
    </filters>
    <label>精算チェックで問題ありの解約業務</label>
</ListView>