force-app/main/default/objects/CancelCalculate__c/listViews/CalculateIncompleteCancelOperation.listView-meta.xml
<ListView>
    <fullName>CalculateIncompleteCancelOperation</fullName>
    <columns>NAME</columns>
    <columns>AccountID__c</columns>
    <columns>Account__c</columns>
    <columns>OwnerNameKana__c</columns>
    <columns>CalculateCounter__c</columns>
    <columns>CancelCounterName__c</columns>
    <columns>DepositRefundScheduledDate__c</columns>
    <columns>DepositRefundScheduledAmount__c</columns>
    <columns>RentBankAccountContractor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>完了</value>
    </filters>
    <label>精算が未完了解約業務</label>
</ListView>