force-app/main/default/objects/CancelCalculate__c/listViews/CancelCalculateProcessNotRegistrationList.listView-meta.xml
<ListView>
    <fullName>CancelCalculateProcessNotRegistrationList</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RealEstate__c</columns>
    <columns>DepositRefundScheduledDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProcessManagement__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>DepositRefundScheduledAmount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>解約精算工程未登録リスト</label>
</ListView>