force-app/main/default/objects/CancelCalculate__c/listViews/CancelCalculateReconfirmRequestStaffProgression.listView-meta.xml
<ListView>
    <fullName>CancelCalculateReconfirmRequestStaffProgression</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>RealEstate__c</columns>
    <columns>AccountName__c</columns>
    <columns>ReconfirmDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReconfirmDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Reconfirmer__c</field>
        <operation>equals</operation>
    </filters>
    <label>再査担当リストビュー(進行中)</label>
</ListView>